--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,9 +32,12 @@
 @tailwind utilities;
 
 
+::-webkit-scrollbar {
+  width: 0px;
+}
 
 .main-screen{
-    @apply w-[calc(100vw_-_260px)] flex flex-col
+    @apply w-[calc(100vw_-_260px)] flex flex-col bg-[#323232] left-[260px] absolute
 }
 
 
@@ -77,90 +80,90 @@ table{
 }
 
 
-div.spinner {
+
+.container {
+  background: #eb5bec;
+  border-radius: 16px;
+  display: grid;
+  height: 237px;
+  overflow: hidden;
+  place-items: center;
   position: relative;
-  width: 54px;
-  height: 54px;
-  display: inline-block;
-  margin-left: 50%;
-  margin-right: 50%;
-  background: #74a6f2;
-  padding: 10px;
-  border-radius: 10px;
+  width: 315px;
 }
-
-div.spinner div {
-  width: 6%;
-  height: 16%;
-  background: #fff;
+.container::after {
+  background-image: url("https://assets.codepen.io/9632/dolby-atmos.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50px;
+  content: "";
+  height: 100%;
   position: absolute;
-  left: 49%;
-  top: 43%;
-  opacity: 0;
-  border-radius: 50px;
-  box-shadow: 0 0 3px rgba(0,0,0,0.2);
-  animation: fade 1s linear infinite;
-  -webkit-border-radius: 50px;
-  -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
-  -webkit-animation: fade 1s linear infinite;
+  width: 100%;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: 1;}
-  to {opacity: 0.25;}
+.content {
+  color: #fff;
+  font-family: system-ui;
+  position: relative;
+  text-align: center;
+  top: -4rem;
+  z-index: 2;
+}
+.content h1 {
+  font-size: 3rem;
+  font-weight: 500;
+  margin: 0;
+}
+.content p {
+  margin: 0;
 }
 
-div.spinner div.bar1 {
-  -webkit-transform:rotate(0deg) translate(0, -130%);
-  -webkit-animation-delay: 0s;
-  transform: rotate(0deg) translate(0, -130%);
-  animation-delay: 0s;
-}    
-
-div.spinner div.bar2 {
-  -webkit-transform:rotate(30deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.9167s;
-  transform: rotate(30deg) translate(0, -130%);
-  animation-delay: -0.9167s;
+.box {
+  --delay: 1s;
+  animation: grow 10s linear infinite;
+  animation-delay: var(--delay);
+  background: #471e45;
+  height: 100px;
+  opacity: 0.5;
+  position: absolute;
+  width: 100px;
+}
+.box:nth-child(2) {
+  --delay: 2s;
+}
+.box:nth-child(3) {
+  --delay: 3s;
+}
+.box:nth-child(4) {
+  --delay: 4s;
+}
+.box:nth-child(5) {
+  --delay: 5s;
+}
+.box:nth-child(6) {
+  --delay: 6s;
+}
+.box:nth-child(7) {
+  --delay: 7s;
+}
+.box:nth-child(8) {
+  --delay: 8s;
+}
+.box:nth-child(9) {
+  --delay: 9s;
+}
+.box:nth-child(10) {
+  --delay: 10s;
 }
 
-div.spinner div.bar3 {
-  -webkit-transform:rotate(60deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.833s;
-}
-div.spinner div.bar4 {
-  -webkit-transform:rotate(90deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.7497s;
-}
-div.spinner div.bar5 {
-  -webkit-transform:rotate(120deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.667s;
-}
-div.spinner div.bar6 {
-  -webkit-transform:rotate(150deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.5837s;
-}
-div.spinner div.bar7 {
-  -webkit-transform:rotate(180deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.5s;
-}
-div.spinner div.bar8 {
-  -webkit-transform:rotate(210deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.4167s;
-}
-div.spinner div.bar9 {
-  -webkit-transform:rotate(240deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.333s;
-}
-div.spinner div.bar10 {
-  -webkit-transform:rotate(270deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.2497s;
-}
-div.spinner div.bar11 {
-  -webkit-transform:rotate(300deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.167s;
-}
-div.spinner div.bar12 {
-  -webkit-transform:rotate(330deg) translate(0, -130%); 
-  -webkit-animation-delay: -0.0833s;
+@keyframes grow {
+  from {
+    opacity: 0.5;
+    transform: scale(0);
+  }
+  to {
+    opacity: 0;
+    transform: scale(3.85);
+  }
 }
