--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -112,3 +112,44 @@
   left: 40%;
   top: 33%;
 }
+
+
+.music-bar-wave {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: fit-content; /* Adjust the height as needed */
+}
+
+.music-bar {
+  width: 2px;
+  height: 20px; /* Adjust the height as needed */
+  background-color: #FF293F; /* Adjust the color as needed */
+  margin: 0 2px; /* Adjust the spacing between bars as needed */
+  animation: music-bar-animation 1s infinite;
+  border-radius: 4px;
+}
+
+.music-bar:nth-child(2) {
+  animation-delay: 0.4s; /* Delay the animation for the second child by 0.5 seconds */
+}
+
+.music-bar:nth-child(3) {
+  animation-delay: 1.2s; /* Delay the animation for the third child by 1 second */
+}
+
+.music-bar:nth-child(4) {
+  animation-delay: 1.7s; /* Delay the animation for the third child by 1 second */
+}
+
+@keyframes music-bar-animation {
+  0% {
+    height: 4px; /* Initial height of the bars */
+  }
+  50% {
+    height: 20px; /* Maximum height of the bars */
+  }
+  100% {
+    height: 4px; /* Back to the initial height of the bars */
+  }
+}
